--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,8 +27,7 @@
 
     -->
 
-    <link rel="preconnect" href="https://portaldefi.com/">
-    <link rel="preconnect" href="https://portaldefi.com/assets">
+    <script src="https://kit.fontawesome.com/04a5898080.js" crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
   <body>
